hide start when running

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="panel"><h1 class="counter">--:--</h1></div>
         <!-- Loading dots -->
         <span class="dots cf">
-          <div class="dot dot1">⛏️ </div><div class="dot dot2">⛏️ </div><div class="dot dot3">⛏️ </div>
+          <div class="dot dot1">🤔</div><div class="dot dot2">🤔</div><div class="dot dot3">🤔</div>
         </span>
       </div>
     </div>
