--- a/admin.html
+++ b/admin.html
@@ -65,6 +65,7 @@ body {
   }
 
   document.querySelector('#start').addEventListener('click', (e) => {
+    document.querySelector('#start').style.display = 'none'
     ws.send(JSON.stringify({
       cmd: 'ADMIN_START',
       id: serverId,
@@ -74,6 +75,7 @@ body {
   })
 
   document.querySelector('#stop').addEventListener('click', (e) => {
+    document.querySelector('#start').style.display = 'inline'
     ws.send(JSON.stringify({
       cmd: 'ADMIN_STOP',
       id: serverId
