--- a/screen/index.html
+++ b/screen/index.html
@@ -168,5 +168,6 @@
 
 	<script type="text/javascript" src="winwin-states.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="ws.js"></script>
 </body>
 </html>
