--- a/screen/index.html
+++ b/screen/index.html
@@ -161,8 +161,8 @@
 	</div>
 
 	<div class="legend tiny hidden">
-		<div class="legend-item agree tiny">Agree</div>
-		<div class="legend-item disagree tiny">Disagree</div>
+		<div class="legend-item agree tiny">Disagree</div>
+		<div class="legend-item disagree tiny">Agree</div>
 	</div>
 
 
