--- a/index.html
+++ b/index.html
@@ -1,201 +1,172 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/logo.css">
-<link rel="stylesheet" type="text/css" href="css/index.css">
-<link rel="stylesheet" type="text/css" href="css/load.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>WINWIN</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
 
-<audio id="fg-audio">
-  <source src="fg.mpeg" type="audio/mpeg">
-</audio>
-<audio id="bg-audio" loop>
-  <source src="bg.mpeg" type="audio/mpeg">
-</audio>
+	<div id="rounds">
+		<div class="ticker">
+			<span>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+				<em>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</em>
+				<div>WE WILL BEGIN SHORTLY&nbsp;&nbsp;&nbsp;</div>
+			</span>
+		</div>
+		<svg version="1.1" preserveAspectRatio="none" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			 viewBox="0 0 1467.6 357.9" style="enable-background:new 0 0 1467.6 357.9;" xml:space="preserve">
+		<g class="left-win">
+			<path d="M78.2,357.9L0,0h39.7l44.7,234.6c4.7,24.1,8.9,48.5,12.5,73.2l13.2-66.2L165.9,0h47.2L255,181.2
+				c10.2,44.1,17.8,86.3,22.9,126.7c3.7-23.3,8.6-49.2,14.4-77.9L338.5,0h39.1l-80.7,357.9h-37.3l-62-272.7l-9.3-42
+				c-2.8,15.6-5.6,29.6-8.5,42l-62.3,272.7H78.2z"/>
+			<path d="M406.3,357.9V0h38.8v357.9H406.3z"/>
+			<path d="M491.5,357.9V0h39.8l154.3,281.6V0h37.1v357.9h-39.8L528.9,76.3v281.6H491.5z"/>
+		</g>
+		<g class="right-win">
+			<path d="M761.4,357.9L743.2,0H783l6.8,177c1.6,38.7,2.4,69.3,2.4,91.6l-0.2,23.4l35.1-85.9L916.5,0h40.6l9.8,209.2
+				c1.1,25.6,1.9,54.4,2.2,86.4c2.4-8.1,6.5-20.1,12.2-35.9c9.9-27,17.3-46.4,22.2-58.1L1087.2,0h39.8L977.9,357.9h-42.1l-10.1-216.7
+				c-0.8-18.9-1.6-41.6-2.2-68.3c-8.5,23.4-15.2,41-20.2,52.7L801.9,357.9H761.4z"/>
+			<path d="M1084.7,357.9L1146,0h39.4l-61.3,357.9H1084.7z"/>
+			<path d="M1178.5,357.9L1239.4,0h38.3l49.1,134.5c14.5,39.5,25.8,72.5,34.1,99.1c5.8,18.4,12.1,41.7,18.8,70.1
+				c3.7-30.8,8.2-61.9,13.4-93.3L1429.5,0h38.1l-61.3,357.9h-38.8l-72.4-206.6c-12.8-36.9-22.8-69.1-30-96.6
+				c-1.8,23.3-5.6,51.8-11.4,85.7l-37.1,217.5H1178.5z"/>
+		</g>
+		</svg>
 
-<div id="content"></div>
-<div class="background"></div>
+		<div class="ticker">
+			<span>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+			</span>
+		</div>
 
-<div id="templates">
+	</div>
 
-  <!-- Welcome -->
-  <div class="welcome vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-        <h1 class="logo">WIN WIN</h1>
-        <button class="button">
-          <sup>( </sup><span class="white logo">JOIN</span><sub> )</sub>
-        </button>
-      </div>        
-    </div>
-  </div>
+	
+	<div class="hidden-logo">
+		<div class="ticker">
+			<span>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+			</span>
+		</div>
+		<svg version="1.1" preserveAspectRatio="none" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			 viewBox="0 0 1467.6 357.9" style="enable-background:new 0 0 1467.6 357.9;" xml:space="preserve">
+		<g class="left-win">
+			<path d="M78.2,357.9L0,0h39.7l44.7,234.6c4.7,24.1,8.9,48.5,12.5,73.2l13.2-66.2L165.9,0h47.2L255,181.2
+				c10.2,44.1,17.8,86.3,22.9,126.7c3.7-23.3,8.6-49.2,14.4-77.9L338.5,0h39.1l-80.7,357.9h-37.3l-62-272.7l-9.3-42
+				c-2.8,15.6-5.6,29.6-8.5,42l-62.3,272.7H78.2z"/>
+			<path d="M406.3,357.9V0h38.8v357.9H406.3z"/>
+			<path d="M491.5,357.9V0h39.8l154.3,281.6V0h37.1v357.9h-39.8L528.9,76.3v281.6H491.5z"/>
+		</g>
+		<g class="right-win">
+			<path d="M761.4,357.9L743.2,0H783l6.8,177c1.6,38.7,2.4,69.3,2.4,91.6l-0.2,23.4l35.1-85.9L916.5,0h40.6l9.8,209.2
+				c1.1,25.6,1.9,54.4,2.2,86.4c2.4-8.1,6.5-20.1,12.2-35.9c9.9-27,17.3-46.4,22.2-58.1L1087.2,0h39.8L977.9,357.9h-42.1l-10.1-216.7
+				c-0.8-18.9-1.6-41.6-2.2-68.3c-8.5,23.4-15.2,41-20.2,52.7L801.9,357.9H761.4z"/>
+			<path d="M1084.7,357.9L1146,0h39.4l-61.3,357.9H1084.7z"/>
+			<path d="M1178.5,357.9L1239.4,0h38.3l49.1,134.5c14.5,39.5,25.8,72.5,34.1,99.1c5.8,18.4,12.1,41.7,18.8,70.1
+				c3.7-30.8,8.2-61.9,13.4-93.3L1429.5,0h38.1l-61.3,357.9h-38.8l-72.4-206.6c-12.8-36.9-22.8-69.1-30-96.6
+				c-1.8,23.3-5.6,51.8-11.4,85.7l-37.1,217.5H1178.5z"/>
+		</g>
+		</svg>
 
-  <!-- Until next session -->
-  <div class="til loading vcenter screen">
-    <h1 class="logo nowrap">Patience ... is ... a ...</h1>
-    <h1 class="logo nowrap">... virtue.</h1>
-    <!-- Loading dots -->
-    <span class="dots cf">
-      <div class="dot dot1">⛏️ </div><div class="dot dot2">⛏️ </div><div class="dot dot3">⛏️ </div>
-    </span>
-  </div>  
+		<div class="ticker">
+			<span>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+				<em>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</em>
+				<div>A CONSENSUS ALGORITHM&nbsp;&nbsp;&nbsp;</div>
+			</span>
+		</div>
+	</div>
 
-  <!-- Tutorial -->
-  <div class="tutorial vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-        <h1>Start audio...?</h1>
-      </div>
-      <button class="button agree left">
-        <sup>( </sup><span class="white logo">YES</span><sub> )</sub>
-      </button>
-    </div>
-  </div>
-
-  <!-- showReady() -->
-  <div class="ready vcenter screen">
-    <div class="center">
-      <div class="panel outline">
-        <div class=" statement">
-          <h1>You are with <span class="dynamic count"></span> people. We will begin shortly!</h1>
-        </div>
-	<!--
-        <button class="button agree left">
-          <sup>( </sup><span class="white logo">YES</span><sub> )</sub>
-        </button>
-        <button class="button disagree">
-          <sup>( </sup><span class="white logo">NO</span><sub> )</sub>
-        </button>
-	-->
-      </div>
-    </div>
-  </div>
-
-  <!-- Statement/Question -->
-  <div class="question vcenter screen">
-    <div class="center">
-      <div class="panel  outline">
-	<div class="statement">
-          <h1 class="stmt">Friends should be shamed for flying</h1>
-          <h1 class="counter">--:--</h1>
-          <button class="button agree left">
-            <sup>( </sup><span class="white logo">AGREE</span><sub> )</sub>
-          </button>
-          <button class="button disagree">
-            <sup>( </sup><span class="white logo">DISAGREE</span><sub> )</sub>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Waiting -->
-  <div class="waiting vcenter screen">
-    <div class="center">
-      <div class="panel pleasewait outline loading">
-        <h1 class="logo">Waiting ... for ... everyone ...</h1>
-        <h1 class="logo">to respond...</h1>
-        <div class="panel"><h1 class="counter">--:--</h1></div>
-        <!-- Loading dots -->
-        <span class="dots cf">
-          <div class="dot dot1">🤔</div><div class="dot dot2">🤔</div><div class="dot dot3">🤔</div>
-        </span>
-      </div>
-    </div>
-  </div>  
-
-  <!-- Prompt -->
-  <div class="prompt vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-        <h2>You responded <span class="dynamic logo"></span> to</h2>
-        <div class="panel vcenter question"><h1></h1></div>
-        <div class="panel"><h2 class="counter">--:--</h2></div>
-        <div class="panel">
-          <textarea placeholder="Please write a statement that explains your answer..."></textarea>
-        </div>
-        <div class="panel button submit">
-          <button class="button agree left">
-            <sup>( </sup><span class="white logo">SUBMIT</span><sub> )</sub>
-          </button>
-        </div>
-      </div> 
-    </div>
-  </div>
-
-  <!-- Consensus -->
-  <div class="consensus vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-        <h1>You have</h1>
-        <h1>consensus!!!!</h1>
-        <h4>
-          You have reached consensus
-          <span class="dynamic">0</span> time(s) in this
-          discussion.
-          Although you might differ in
-          opinions on this statement,
-          you have discovered some 
-          common ground to make
-          decisions together.
-        </h4>
-        <button class="agree">
-          <sup>( </sup><span class="white logo">RESULTS</span><sub> )</sub>
-        </button>
-      </div>
-    </div>  
-  </div>  
-
-  <!-- No consensus -->
-  <div class="consensless vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-        <h1>You unfortunately had no moments of consensus.</h1>
-        <h1>🙁🙁🙁</h1>
-        <button class="agree left">
-          <sup>( </sup><span class="white logo">TRY AGAIN</span><sub> )</sub>
-        </button>
-      </div>
-    </div>
-  </div>  
-
-  <!-- Error -->
-  <div class="error vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-        <h1 class="msg"></h1>
-        <h1>🙁🙁🙁</h1>
-        <h1>Join again?</h1>
-        <button class="agree">
-          <sup>( </sup><span class="white logo">YES</span><sub> )</sub>
-        </button>
-      </div>
-    </div>
-  </div>
+	<div class="legend tiny hidden">
+		<div class="legend-item agree tiny">Agree</div>
+		<div class="legend-item disagree tiny">Disagree</div>
+	</div>
 
 
-  <!-- Results -->
-  <div class="results vcenter screen">
-    <div class="center outline">
-      <div class="panel">
-	<h1>Your moments of consensus.</h1>
-        <h1>🌈🌈🌈</h1>  
-        <ul></ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script src="js/audio.js"></script>
-<script src="js/cookies.js"></script>
-<!-- <script src="js/swipe.js"></script> -->
-<script src="js/index.js"></script> 
-<script src="js/logo.js"></script> 
-
+	<script type="text/javascript" src="winwin-branch.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
-
-
